Add AWS CD part

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,43 @@
-version: 2.1 # use CircleCI 2.1
-jobs: # a collection of steps
-  build: # runs not using Workflows must have a `build` job as entry point
-    docker: # run the steps with Docker
-      - image: circleci/node:latest # with this image as the primary container; this is where all `steps` will run
-    steps: # a collection of executable commands
-      - checkout # special step to check out source code to working directory
+version: 2
+jobs:
+  test:
+    docker:
+      - image: circleci/node:9.2.0
+      - image: docker:17.05.0-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker
       - run:
-          name: Check Node.js version
-          command: node -v
+          name: Testing
+          command: docker-compose -f docker-compose-test.yml run docker-ci
+  deploy:
+    machine: ture // 把docker拔掉換成machine
+    steps:
+      - checkout
       - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache: # special step to restore the dependency cache
-          name: Restore dependencies from cache
-          key: dependency-cache-{{ checksum "package-lock.json" }}
+          name: Install EB Command Line
+          command: >
+            sudo apt-get update &&
+            sudo apt-get install -y python python-dev python-pip python-virtualenv &&
+            sudo rm -rf /var/lib/apt/lists/* &&
+            sudo pip install awsebcli &&
+            sudo pip install --upgrade --user awsebcli
       - run:
-          name: install-npm-wee
-          command: npm install
-      - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - run: # run tests
-          name: test
-          command: npm test
+          name: Setup EB Credentials
+          command: >
+            mkdir -p ~/.aws &&
+            echo [default] >> ~/.aws/credentials &&
+            echo aws_access_key_id = $AWS_ACCESS_KEY_ID >> ~/.aws/credentials &&
+            echo aws_secret_access_key = $AWS_SECRET_ACCESS_KEY >> ~/.aws/credentials
+      - deploy:
+          name: Deploy To ENV Staging
+          #command: sudo eb deploy docker-ci-test-dev # deploy (Deploy to eb)
+		  command: eb deploy --profile default
+workflows: 
+  version: 2 
+  docker-cicd: 
+    jobs: 
+      - test
+      - deploy:
+          requires:
+            - test
